tests/lean/tactic_failure.lean.expected.out
tactic_failure.lean:4:0: error: assumption tactic failed
state:
A B : Type,
Hb : B
⊢ A
