tests/lean/tactic_failure.lean
open tactic

example (A B : Type) : B → A :=
by do intro `Hb, assumption
